[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm[toml]>=6.2.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "uron"
dynamic = ["version"]
authors = [
  { name="Yan Zhang", email="dev.claude.yan.zhang@gmail.com" },
]
description = "A python library to run code with different venvs or package versions"
readme = "README.md"
keywords = ["venv", "python", "package"]
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
"Homepage" = "https://github.com/claudezss/uron"
"Bug Tracker" = "https://github.com/claudezss/uron/issues"

[tool.isort]
force_grid_wrap=0
include_trailing_comma=true
line_length=120
multi_line_output=3
skip_glob=["env/*", 'docs/*']

[tool.black]
line_length = 80
max-line-length=80
exclude =[".git", "__pycache__", "venv", "env", 'docs/*']
include = ["uron/*"]

[tool.mypy]
strict=true
ignore_missing_imports=true
disallow_subclassing_any=false
exclude = ['venv', '.venv', 'tests/*', 'docs/*']

[tool.pytest.ini_options]
